<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CCDroid</string>
    <string name="title_drawer_item1">All Projects</string>
    <string name="title_drawer_item2">TODO</string>
    <string name="title_drawer_item0">Add New Url</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="default_textview_text">Press Refresh</string>
    <string name="action_add_url">Add Url</string>
    <string name="dialog_message_add_url">Specify the cctray xml url from your build server</string>
    <string name="dialog_title_add_url">Add Url</string>
    <string name="toast_unable_to_fetch_project_list">Unable to fetch project list</string>
    <string name="toast_network_unavailable">Network Unavailable</string>
    <string name="alert_title_details">Details</string>
    <string name="alert_button_open">Open</string>

    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="url">URL</string>
    <string name="label">Label</string>
    <string name="activity">Activity</string>

    <string name="placeholder_name">shubhamchaudhary/wordpowermadeeasy (master) :: compile_test</string>
    <string name="placeholder_activity">Sleeping</string>
    <string name="placeholder_time">2015–05-15T11:32:34Z</string>
    <string name="placeholder_url">https://travis-ci.org/shubhamchaudhary/CCDroid</string>
    <string name="placeholder_label">55</string>
    <string name="placeholder_flag">2130837559</string>
</resources>
