<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size5"
    app:cardCornerRadius="@dimen/size5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lw_status_flag"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="Status"
            android:src="@drawable/button_green"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/size5"
            android:paddingLeft="@dimen/size3"
            android:paddingRight="@dimen/size3"
            android:paddingTop="@dimen/size5">

            <TextView
                android:id="@+id/lw_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_name"
                android:textColor="@color/font_color"
                android:textSize="15sp"/>

            <LinearLayout
                android:paddingTop="@dimen/size5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/lw_project_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:text="@string/placeholder_activity"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/lw_project_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/placeholder_time"
                    android:textSize="12sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
